--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
   "devDependencies": {
     "@ai-sdk/openai-compatible": "^1.0.0-beta.5",
     "@ai-sdk/svelte": "^3.0.0-beta.19",
+    "@auth/core": "^0.40.0",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@iconify/svelte": "^5.0.0",
     "@sveltejs/kit": "^2.24.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "ai": "^5.0.0-beta.19",
+    "codemirror": "^6.0.2",
     "svelte": "^5.36.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
