--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
     "dev": "vite dev",
     "build": "vite build",
     "typegen": "svelte-kit sync",
-    "clean": "rm -rf node_modules .svelte-kit && npm install --prefer-offline && npm run typegen"
+    "drizzle": "drizzle-kit",
+    "clean": "rm -rf node_modules .svelte-kit && bun install --prefer-offline && bun run typegen"
   },
   "devDependencies": {
     "@ai-sdk/openai-compatible": "^1.0.0-beta.5",
     "@ai-sdk/svelte": "^3.0.0-beta.19",
     "@auth/core": "^0.40.0",
+    "@aws-sdk/client-s3": "^3.846.0",
+    "@aws-sdk/lib-storage": "^3.846.0",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@daytonaio/sdk": "^0.23.0",
     "@iconify/svelte": "^5.0.0",
+    "@libsql/client": "^0.15.9",
     "@sveltejs/kit": "^2.24.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/bun": "^1.2.18",
     "ai": "^5.0.0-beta.19",
     "codemirror": "^6.0.2",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "svelte": "^5.36.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
